--- a/src/components/loyauts/MainLayout.scss
+++ b/src/components/loyauts/MainLayout.scss
@@ -1,6 +1,6 @@
 .MainLayout {
   // Основной контейнер всего layout’а приложения
-
+  user-select: none;
   min-height: 100vh;
   // Минимальная высота — вся высота окна браузера
 
