--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -64,10 +64,11 @@
   /* LANG BUTTON (AboutLang) */
   /* ============================= */
   &.btn--lang {
+    margin-bottom: 2px;
     width: 100%;
-    padding: 6px 12px;
+    padding: 5px 10px;
     border-radius: 2px;
-    background: rgba(46, 44, 44, 0.8);
+    background: rgba(51, 45, 45, 0.8);
     color: #fbe8a6;
     font-weight: 500;
     text-align: center;
