--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -12,25 +12,26 @@
   /* PRIMARY BUTTON */
   /* ============================= */
   &.btn--primary {
-    align-self: flex-start;
-    padding: 8px 16px;
-    box-shadow: 0 2px 6px rgba(212, 175, 55, 0.5);
-    background: linear-gradient(155deg, #2b2b2b, #3b321c);
-    border-radius: 6px;
-    color: #fbe8a6;
+    padding: 10px 14px;
+    border-radius: 12px;
+    color: #fbe8a6; /* золотой текст */
+    background: transparent; /* прозрачный фон */
+    box-shadow: 0 1px 4px rgba(212, 175, 55, 0.5); /* золотая тень */
+    border: 1px solid rgba(212, 175, 55, 0.5);
     transition: all 0.35s ease;
+    cursor: pointer;
 
     &:hover {
-      background: linear-gradient(155deg, #3b321c, #2b2b2b);
+      background: rgba(212, 175, 55, 0.1);
       color: #fff;
       transform: translateY(-1px);
-      box-shadow: 0 1px 2px rgba(212, 175, 55, 0.6);
+      box-shadow: inset 0 0 8px rgba(232, 191, 57, 0.35);
+      border-color: rgba(212, 175, 55, 0.6);
     }
 
-    &:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-      pointer-events: none;
+    &:active {
+      transform: translateY(0);
+      box-shadow: 0 1px 4px rgba(212, 175, 55, 0.5);
     }
   }
 
@@ -55,8 +56,8 @@
     &:hover {
       background: linear-gradient(155deg, #3b321c, #2b2b2b);
       color: #fff;
-      transform: translateY(-2px);
-      box-shadow: 0 3px 8px rgba(212, 175, 55, 0.5);
+      box-shadow: 0 2px 4px rgba(212, 175, 55, 0.5);
+      transform: translateY(+2px);
     }
   }
 
