--- a/src/pages/register/Register.scss
+++ b/src/pages/register/Register.scss
@@ -21,7 +21,7 @@
     border: 0.5px solid #82795c;
     // Золотистая рамка
     box-shadow: inset 0.5px 1px 2px 0.5px rgba(212, 175, 55, 0.5);
-    background: rgba(30, 30, 30, 0.85);
+    background: transparent;
     // Темный полупрозрачный фон
 
     color: #fbe8a6;
