--- a/src/pages/register/Register.scss
+++ b/src/pages/register/Register.scss
@@ -1,60 +1,34 @@
 .RegisterForm {
   display: flex;
-  // Flex-контейнер для формы регистрации
-
   flex-direction: column;
-  // Элементы формы располагаются вертикально (email, password, confirmPassword, кнопка)
-
-  gap: 16px;
-  // Расстояние между элементами формы
-
+  gap: 18px;
   width: 100%;
-  // Форма занимает всю ширину контейнера
 
   input {
     padding: 10px;
-    // Внутренние отступы для всех input
-
-    border-radius: 14px;
-    // Скругленные углы поля
-
-    border: 0.5px solid #82795c;
-    // Золотистая рамка
+    border-radius: 12px;
+    border: 1px solid #82795c;
     box-shadow: inset 0.5px 1px 2px 0.5px rgba(212, 175, 55, 0.5);
     background: transparent;
-    // Темный полупрозрачный фон
-
     color: #fbe8a6;
-    // Цвет текста
-
     font-family: monospace;
-    // Моноширинный шрифт
 
     transition: all 0.25s ease;
-    // Плавное изменение всех свойств при фокусе
 
     &::placeholder {
-      color: #ccc;
-      // Цвет текста-подсказки
+      color: #b59854;
     }
 
     &:focus {
       outline: none;
-      // Убираем стандартный outline при фокусе
-
       border-color: #ffd700;
-      // Меняем цвет рамки на золотой при фокусе
-
-      box-shadow: 0 0 6px rgba(212, 175, 55, 0.5);
-      // Добавляем мягкую тень при фокусе
+      box-shadow: 0 0 2px rgba(212, 175, 55, 0.5);
     }
   }
 
   .error {
     color: #ed6a6a;
-    font-size: 12px;
-    margin-bottom: -2px;
-    margin-top: -2px;
+    font-size: 10px;
   }
 
   .password-wrapper {
