--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -1,7 +1,3 @@
-/* ============================= */
-/* Auth Page Wrapper */
-/* ============================= */
-
 .AuthPageWrapper {
   background-size: cover;
   background-repeat: no-repeat;
@@ -9,9 +5,9 @@
 
   height: 100vh;
   display: flex;
-  padding-top: 220px;
+  padding-top: 180px;
   flex-direction: column;
-  gap: 50px;
+  gap: 60px;
   justify-content: start;
   align-items: center;
   flex: 1;
@@ -38,7 +34,7 @@
     z-index: 1;
     color: #ece194;
     font-family: monospace;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 700;
     text-align: center;
 
@@ -70,8 +66,8 @@
 
   max-width: 600px;
   width: 90%;
-  padding: 22px;
-  gap: 20px;
+  padding: 25px;
+  gap: 18px;
 
   border-radius: 24px;
   box-shadow: inset 0 0 22px rgba(212, 175, 55, 0.5);
@@ -158,10 +154,10 @@
 
     &.active {
       color: #b59854;
-      box-shadow: inset 0 0 12px rgba(212, 175, 55, 0.6);
     }
 
     &:hover {
+      flex-basis: 100%;
       box-shadow: inset 0 0 10px rgba(212, 175, 55, 0.5);
       color: #ffffff;
     }
