--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -15,7 +15,7 @@
     padding: 12px;
     font-size: 14px;
     font-weight: 500;
-    color: #b59854;
+    color: #bda344;
     border-radius: 14px;
     box-shadow: inset 0 0 10px rgba(212, 175, 55, 0.5);
     background: transparent;
@@ -44,7 +44,7 @@
     border-radius: 12px;
     padding: 10px 16px;
     background: rgba(40, 35, 30, 0.6);
-    color: #fbe8a6;
+    color: #bda344;
     box-shadow: 0 1px 2px rgba(212, 175, 55, 0.4);
     font-weight: 500;
     transition: all 0.35s ease;
