--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -17,11 +17,11 @@
 
 /* ===== КОНТЕЙНЕР-ОБЁРТКА ДЛЯ ДВУХ БЛОКОВ ===== */
 .ContactWrapper {
-  margin-top: 100px;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   font-size: 1em;
-  gap: 50px;
+  gap: 80px;
   padding: 30px;
   z-index: 2;
 
@@ -39,14 +39,14 @@
 
 /* ===== ОБЩИЕ СТИЛИ КОНТЕЙНЕРОВ ===== */
 .ContactContainer {
-  max-width: 680px;
+  max-width: 550px;
   border-radius: 10px;
-  box-shadow: 0 1px 4px 1px rgba(181, 155, 68, 0.5);
+  box-shadow: 0 1px 3px 1px rgba(181, 155, 68, 0.5);
   display: flex;
   flex-direction: column;
   align-items: start;
   animation: slideIn 1.2s cubic-bezier(0.25, 0.9, 0.25, 1) forwards;
-  gap: 30px;
+
   &:hover {
     transform: translateY(-2px);
     transition: transform 0.3s ease;
@@ -55,30 +55,32 @@
 
 /* ===== ВЕРХНИЙ БЛОК: ИНФОРМАЦИЯ ===== */
 .ContactContainer--info {
-  padding: 28px;
-  color: #fbe8a6;
+  gap: 20px;
+  padding: 25px;
+  color: #bda344;
   .ContactHeader {
-    font-size: 1.2em;
-    font-weight: 400;
+    font-size: 1.1em;
+    font-weight: 500;
   }
 
   p {
     font-size: 0.9rem;
-    color: #e0d7b0;
+    color: #bda344;
   }
 }
 
 /* ===== НИЖНИЙ БЛОК: FEEDBACK ===== */
 .ContactContainer--feedback {
-  padding: 22px;
+  gap: 18px;
+  padding: 20px;
   opacity: 0;
   animation: slideInFeedback 1.3s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
   animation-delay: 0.4s;
 
   .ContactHeader {
-    font-size: 1em;
-    color: #fbe8a6;
-    font-weight: 600;
+    font-size: 0.9em;
+    color: #bda344;
+    font-weight: 500;
   }
 
   .Feedback_input {
@@ -91,7 +93,7 @@
     font-size: 12px;
     line-height: 1.4;
     background: rgba(10, 10, 10, 0.7);
-    border: 1px solid rgba(212, 175, 55, 0.5);
+    border: 1px solid rgba(157, 132, 49, 0.5);
     border-radius: 6px;
     color: #fbe8a6;
 
@@ -104,7 +106,7 @@
 
     &:focus {
       border-color: #d4af37;
-      box-shadow: 0 0 6px rgba(212, 175, 55, 0.5);
+      box-shadow: 0 0 4px rgba(212, 175, 55, 0.5);
       outline: none;
     }
   }
