--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -43,22 +43,32 @@
   &.btn--secondary {
     border-radius: 12px;
     padding: 10px 16px;
-    background: rgba(40, 35, 30, 0.6);
+    background: rgba(115, 92, 42, 0.259); // полностью прозрачный фон
     color: #bda344;
-    box-shadow: 0 1px 2px rgba(212, 175, 55, 0.4);
+    box-shadow: inset 0 1px 2px rgba(212, 175, 55, 0.4); // inset вместо обычного
     font-weight: 500;
     transition: all 0.35s ease;
 
     &.active {
-      background: linear-gradient(155deg, #494330, #b0934a);
+      background: rgba(
+        73,
+        67,
+        48,
+        0.3
+      ); // лёгкая прозрачная подложка вместо градиента
       color: #1c1c1c;
-      box-shadow: inset 0 2px 6px rgba(212, 175, 55, 0.5);
+      box-shadow: inset 0 2px 6px rgba(212, 175, 55, 0.5); // inset сохраняем
     }
 
     &:hover {
-      background: linear-gradient(155deg, #3b321c, #2b2b2b);
+      background: rgba(
+        81,
+        68,
+        36,
+        0.3
+      ); // прозрачная подсветка вместо градиента
       color: #fff;
-      box-shadow: 0 2px 4px rgba(212, 175, 55, 0.5);
+      box-shadow: inset 0 2px 4px rgba(212, 175, 55, 0.5); // inset вместо обычного
       transform: translateY(+2px);
     }
   }
@@ -67,26 +77,31 @@
   /* LANG BUTTON (AboutLang) */
   /* ============================= */
   &.btn--lang {
-    margin-bottom: 2px;
-    width: 100%;
-    padding: 5px 10px;
+    margin-bottom: 1px;
+    padding: 5px;
     border-radius: 2px;
-    background: rgba(51, 45, 45, 0.8);
-    color: #fbe8a6;
+    background: rgba(51, 45, 45, 0); // полностью прозрачный фон
     font-weight: 500;
+    color: #bda344;
     text-align: center;
-    box-shadow: 1px 1px 1px rgba(212, 175, 55, 0.35);
+
     transition: all 0.3s ease;
+    box-shadow: inset 0 1px 4px rgba(212, 175, 55, 0.5); // внутренний бокс сохраняем
 
     &:hover {
-      background: linear-gradient(155deg, #3b321c, #2b2b2b);
+      background: rgba(59, 50, 28, 0.3); // лёгкая прозрачная подложка для hover
       color: #fff;
     }
 
     &.active {
-      background: linear-gradient(155deg, #b0934a, #494330);
+      background: rgba(
+        202,
+        151,
+        22,
+        0.3
+      ); // прозрачный градиент-подобный эффект
       color: #222121;
-      box-shadow: inset 0 1px 4px rgba(212, 175, 55, 0.5);
+      box-shadow: inset 0 1px 4px rgba(212, 175, 55, 0.5); // inset сохраняем
     }
   }
 }
