--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -13,16 +13,17 @@
 
 .AboutContainer {
   flex: 1;
-  max-width: 900px;
+  max-width: 720px;
   display: flex;
   flex-direction: column;
   padding: 25px;
   border-radius: 12px;
   box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
   animation: slideIn 0.7s ease forwards;
-  gap: 40px;
+  gap: 25px;
   position: relative;
   overflow: hidden;
+  padding: 25px;
 }
 
 /* React logo */
@@ -32,7 +33,7 @@
 }
 
 .AboutImage {
-  width: 200px;
+  width: 160px;
   border-radius: 6px;
   border: 1px solid #d4af37;
   opacity: 0;
@@ -48,10 +49,9 @@
 }
 
 .AboutLang_menu {
-  margin-top: 2px;
+  margin-top: 1px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 2px 6px rgba(42, 41, 16, 0.6);
   .AboutLang_item {
     font-size: 12px;
     padding: 3px;
@@ -60,15 +60,15 @@
 
 /* Content */
 .AboutTitle {
-  margin-bottom: 14px;
+  margin-bottom: 5px;
   color: #fbe8a6;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .AboutText {
   line-height: 1.6;
   color: #e0d7b0;
-  font-size: 0.83rem;
+  font-size: 0.8rem;
   font-family: monospace;
 }
 
