--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -63,12 +63,12 @@
   grid-template-rows: auto;
   align-content: start;
 
-  max-width: 540px;
+  max-width: 520px;
   width: 90%;
   padding: 25px;
-  gap: 20px;
+  gap: 18px;
 
-  border-radius: 24px;
+  border-radius: 25px;
   box-shadow: inset 0 0 22px rgba(212, 175, 55, 0.5);
 
   transition:
@@ -159,7 +159,7 @@
       rgba(212, 175, 55, 0.02)
     );
     box-shadow:
-      0 6px 16px rgba(212, 175, 55, 0.25),
+      0 2px 6px rgba(212, 175, 55, 0.25),
       inset 0 0 8px rgba(212, 175, 55, 0.4);
   }
 
@@ -172,13 +172,13 @@
 
   /* active — отдельно, стабильно */
   .segment.active {
-    cursor: default;
+    cursor: pointer;
     background: linear-gradient(
       155deg,
       rgba(212, 175, 55, 0.12),
       rgba(212, 175, 55, 0.04)
     );
-    box-shadow: inset 0 0 10px rgba(212, 175, 55, 0.5);
+    box-shadow: inset 0 0 8px rgba(212, 175, 55, 0.5);
     color: #b59854;
   }
 }
