--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -8,11 +8,38 @@
   transition: all 0.25s ease;
   text-align: center;
 
+  &.btn--comment {
+    width: 20%;
+    padding: 8px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #bda344;
+    border-radius: 10px;
+    box-shadow: inset 0 0 10px rgba(212, 175, 55, 0.5);
+    background: transparent;
+    transition: all 0.35s ease;
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(212, 175, 55, 0.1);
+      color: #fff;
+      transform: translateY(-1px);
+      box-shadow: inset 0 0 8px rgba(232, 191, 57, 0.35);
+      border-color: rgba(212, 175, 55, 0.6);
+    }
+
+    &:active {
+      background: linear-gradient(155deg, #494330, #b0934a);
+
+      box-shadow: inset 0 2px 4px rgba(212, 175, 55, 0.5);
+    }
+  }
+
   /* ============================= */
   /* PRIMARY BUTTON */
   /* ============================= */
   &.btn--primary {
-    padding: 12px;
+    padding: 10px;
     font-size: 14px;
     font-weight: 500;
     color: #bda344;
