--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -3,27 +3,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 140px;
+  margin-top: 80px;
   font-family: monospace;
-  gap: 20px;
   overflow-x: hidden; // ✅ фикс
   overflow-y: auto;
-  padding: 8px;
+  padding: 14px;
 }
 
 .AboutContainer {
   flex: 1;
-  max-width: 720px;
+  max-width: 700px;
   display: flex;
   flex-direction: column;
   padding: 25px;
   border-radius: 12px;
   box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
-  animation: slideIn 0.7s ease forwards;
+  animation: slideInFromTop 0.7s ease forwards;
+  transform-origin: top center; /* для плавности */
   gap: 25px;
   position: relative;
   overflow: hidden;
-  padding: 25px;
 }
 
 /* React logo */
@@ -38,6 +37,7 @@
   border: 1px solid #d4af37;
   opacity: 0;
   animation: imageAppear 0.7s ease forwards;
+  animation-delay: 0.2s; /* появляется чуть позже */
 }
 
 /* Language */
@@ -52,6 +52,7 @@
   margin-top: 1px;
   display: flex;
   flex-direction: column;
+
   .AboutLang_item {
     font-size: 12px;
     padding: 3px;
@@ -73,6 +74,17 @@
 }
 
 /* Animations */
+
+@keyframes slideInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-24px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 @keyframes imageAppear {
   from {
