--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -69,7 +69,7 @@
   /* ============================= */
   &.btn--secondary {
     border-radius: 12px;
-    padding: 10px 16px;
+    padding: 10px;
     background: rgba(115, 92, 42, 0.259); // полностью прозрачный фон
     color: #bda344;
     box-shadow: inset 0 1px 2px rgba(212, 175, 55, 0.4); // inset вместо обычного
