--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -69,10 +69,10 @@
   /* ============================= */
   &.btn--secondary {
     border-radius: 12px;
-    padding: 10px;
-    background: rgba(115, 92, 42, 0.259); // полностью прозрачный фон
+    padding: 8px;
+    box-shadow: inset 0 0 10px rgba(212, 175, 55, 0.5);
+    background: transparent;
     color: #bda344;
-    box-shadow: inset 0 1px 2px rgba(212, 175, 55, 0.4); // inset вместо обычного
     font-weight: 500;
     transition: all 0.35s ease;
 
