--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -170,31 +170,35 @@
 /* MOBILE */
 @media (max-width: 728px) {
   .AboutContainer {
-    gap: 14px;
-    padding: 14px;
+    gap: 12px;
+    padding: 10px;
   }
 
   .AboutImage {
     width: 100px;
   }
-
+  .AboutText {
+    line-height: 1.3;
+    font-size: 0.75rem;
+    font-family: monospace;
+  }
   .AboutSlide img {
-    height: 160px;
+    width: 100%;
   }
 
   .AboutSlider {
     .slick-prev,
     .slick-next {
-      width: 34px;
-      height: 34px;
+      width: 32px;
+      height: 32px;
     }
 
     .slick-prev {
-      left: -14px;
+      left: -15px;
     }
 
     .slick-next {
-      right: -14px;
+      right: -15px;
     }
   }
 }
