--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -9,81 +9,77 @@
   font-family: monospace;
   overflow: hidden;
   gap: 64px;
-}
 
-/* Левая часть */
-.Home_left {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
-
-  .Home_title {
-    font-size: 56px;
+  &_title {
+    font-size: 55px;
     font-weight: 700;
-
-    span {
-      color: #d4af37;
-    }
   }
 
-  .Home_subtitle {
+  &_subtitle {
     font-size: 16px;
     opacity: 0.85;
   }
-}
 
-/* Правая часть */
-.Home_right {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  perspective: 800px; // ключевое для 3D
-}
+  &_left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    span {
+      color: #d8a809;
+    }
+  }
 
-/* Куб */
-.Home_cube {
-  position: relative;
-  width: 140px;
-  height: 140px;
-  transform-style: preserve-3d;
-  animation: rotateCube 8s linear infinite;
+  &_right {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 800px; // ключевое для 3D
+  }
 
-  .face {
-    font-size: 12px;
-    position: absolute;
+  &_cube {
+    position: relative;
     width: 140px;
     height: 140px;
-    background: rgba(146, 128, 69, 0.2); // слегка видимая прозрачная грань
-    backface-visibility: hidden; // предотвращает мерцание
-    display: flex; /* flex-контейнер */
-    justify-content: center; /* центр по горизонтали */
-    align-items: center; /* центр по вертикали */
-    text-align: center; /* для многострочного текста */
-  }
+    transform-style: preserve-3d;
+    animation: rotateCube 8s linear infinite;
 
-  /* Грани куба */
-  .face--front {
-    transform: rotateY(0deg) translateZ(75px);
-  }
-  .face--back {
-    transform: rotateY(180deg) translateZ(75px);
-  }
-  .face--left {
-    transform: rotateY(-90deg) translateZ(75px);
-  }
-  .face--right {
-    transform: rotateY(90deg) translateZ(75px);
-    writing-mode: vertical-rl; /* вертикальный текст сверху вниз */
-    text-orientation: upright; /* буквы не переворачиваются */
-  }
-  .face--top {
-    transform: rotateX(90deg) translateZ(75px);
-  }
-  .face--bottom {
-    transform: rotateX(-90deg) translateZ(75px);
+    .face {
+      font-size: 12px;
+      position: absolute;
+      width: 140px;
+      height: 140px;
+      background: rgba(146, 128, 69, 0.2); // слегка видимая прозрачная грань
+      backface-visibility: hidden; // предотвращает мерцание
+      display: flex; /* flex-контейнер */
+      justify-content: center; /* центр по горизонтали */
+      align-items: center; /* центр по вертикали */
+      text-align: center; /* для многострочного текста */
+    }
+
+    /* Грани куба */
+    .face--front {
+      transform: rotateY(0deg) translateZ(75px);
+    }
+    .face--back {
+      transform: rotateY(180deg) translateZ(75px);
+    }
+    .face--left {
+      transform: rotateY(-90deg) translateZ(75px);
+    }
+    .face--right {
+      transform: rotateY(90deg) translateZ(75px);
+      writing-mode: vertical-rl; /* вертикальный текст сверху вниз */
+      text-orientation: upright; /* буквы не переворачиваются */
+    }
+    .face--top {
+      transform: rotateX(90deg) translateZ(75px);
+    }
+    .face--bottom {
+      transform: rotateX(-90deg) translateZ(75px);
+    }
   }
 }
 
@@ -99,8 +95,8 @@
 
 /* Адаптив */
 @media (max-width: 1024px) {
-  .Home_left .Home_title {
-    font-size: 32px;
+  .Home_title {
+    font-size: 28px;
   }
 }
 
@@ -109,24 +105,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 36px;
+    gap: 56px;
     padding: 14px 18px;
     text-align: center;
-  }
+    &_left,
+    &_right {
+      flex: unset;
+      width: 100%;
+    }
 
-  .Home_left,
-  .Home_right {
-    flex: unset;
-    width: 100%;
-  }
+    &_cube {
+      width: 100px;
+      height: 100px;
 
-  .Home_cube {
-    width: 100px;
-    height: 100px;
-
-    .face {
-      width: 128px;
-      height: 128px;
+      .face {
+        width: 128px;
+        height: 128px;
+      }
     }
   }
 }
