--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -96,7 +96,10 @@
 /* Адаптив */
 @media (max-width: 1024px) {
   .Home_title {
-    font-size: 28px;
+    font-size: 26px;
+  }
+  .Home_subtitle {
+    font-size: 14px;
   }
 }
 
