--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -27,8 +27,8 @@
     inset 0 -1px 2px rgba(212, 175, 55, 0.5);
   z-index: 1000;
 
-  .Nav_logo img {
-    width: 38px;
+  &_logo img {
+    width: 36px;
     border-radius: 50%;
     cursor: pointer;
 
@@ -43,16 +43,16 @@
   /* ===============================
      LINKS
      =============================== */
-  .Nav_links {
+  &_links {
     display: flex;
-    gap: 150px;
+    gap: 140px;
 
     a {
       text-decoration: none;
-      color: #bda344;
+      color: #c8aa3d;
       font-weight: 600;
       font-family: monospace;
-      font-size: 1.1rem;
+      font-size: 1rem;
 
       position: relative;
       transition: color 0.4s ease;
@@ -66,16 +66,12 @@
         position: absolute;
         left: 0;
         bottom: -2px;
-        height: 2px;
+        height: 1.5px;
         width: 100%;
-        border-radius: 2px;
-
         background-color: #bda344;
-
         transform: scaleX(0);
         transform-origin: left;
         opacity: 0;
-
         will-change: transform, opacity;
       }
 
@@ -108,25 +104,25 @@
   /* ===============================
      MOBILE (NO BLUR)
      =============================== */
-  @media (max-width: 768px) {
-    padding: 0.4rem;
+  @media (max-width: 728px) {
+    padding: 0.3rem;
 
-    .Nav_links {
-      gap: 36px;
+    &_links {
+      gap: 18px;
 
       a {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
       }
     }
 
-    .Nav_logo img {
-      width: 26px;
+    &_logo img {
+      width: 24px;
     }
 
-    .Nav_logout {
+    &_logout {
       border-radius: 8px;
-      padding: 5px;
-      font-size: 0.7rem;
+      padding: 3px;
+      font-size: 0.5rem;
     }
   }
 }
