--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -3,74 +3,128 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 90px;
+  margin-top: 100px;
   font-family: monospace;
   overflow-x: hidden;
   overflow-y: auto;
   padding: 10px;
   gap: 50px;
-}
-
-.AboutContainer {
-  flex: 1;
-  max-width: 720px;
-  display: flex;
-  flex-direction: column;
-  padding: 16px;
-  border-radius: 12px;
-  box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
-  animation: slideInFromTop 0.7s ease forwards;
-  transform-origin: top center;
-  gap: 20px;
-  position: relative;
-  overflow: visible; /* чтобы стрелки не обрезались */
-}
-
-/* React logo */
-.AboutImageWrapper {
-  display: flex;
-  justify-content: start;
-}
-
-.AboutImage {
-  width: 100px;
-  border-radius: 5px;
-  border: 1px solid #cdac3e;
-  opacity: 0;
-  animation: imageAppear 0.7s ease forwards;
-  animation-delay: 0.2s;
-}
-
-/* Language */
-.AboutLang {
-  position: absolute;
-  top: 8px;
-  right: 10px;
-  z-index: 10;
-}
-
-.AboutLang_menu {
-  display: flex;
-  flex-direction: column;
-
-  .AboutLang_item {
-    font-size: 10px;
-    padding: 5px;
+  &_container {
+    flex: 1;
+    max-width: 720px;
+    display: flex;
+    flex-direction: column;
+    padding: 14px;
+    border-radius: 12px;
+    box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
+    animation: slideInFromTop 0.7s ease forwards;
+    transform-origin: top center;
+    gap: 20px;
+    position: relative;
+    overflow: visible;
   }
-}
+  &_wrapper > img {
+    width: 80px;
+    border-radius: 50%;
+    opacity: 0;
+    animation: imageAppear 0.7s ease forwards;
+    animation-delay: 0.2s;
+    transition: transform 0.25s ease;
+    will-change: transform;
+  }
+  &_lang {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    z-index: 10;
+  }
+  &_menu {
+    display: flex;
+    flex-direction: column;
+  }
+  &_item {
+    font-size: 10px;
+    padding: 4px;
+  }
 
-/* Content */
-.AboutTitle {
-  margin-bottom: 5px;
-  color: #fbe8a6;
-  font-size: 1rem;
-}
+  &_content {
+    padding: 2px;
+  }
+  &_title {
+    margin-bottom: 4px;
+    color: #fbe8a6;
+    font-size: 0.9rem;
+  }
+  &_text {
+    line-height: 1.3;
+    color: #e0d7b0;
+    font-size: 0.8rem;
+    font-family: monospace;
+  }
+  &_slider {
+    width: 100%;
+    max-width: 1100px;
+    position: relative;
 
-.AboutText {
-  line-height: 1.5;
-  color: #e0d7b0;
-  font-size: 0.85rem;
-  font-family: monospace;
+    .slick-prev,
+    .slick-next {
+      width: 40px;
+      height: 40px;
+      z-index: 10;
+      border-radius: 50%;
+      background: rgba(40, 39, 39, 0.2); /* полупрозрачный фон */
+      box-shadow:
+        inset 0 0 10px rgba(212, 175, 55, 0.35),
+        0 0 4px rgba(212, 175, 55, 0.25);
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+
+      /* плавный отклик */
+      transition:
+        transform 0.4s ease,
+        box-shadow 0.4s ease,
+        background 0.4s ease;
+    }
+
+    .slick-prev:hover,
+    .slick-next:hover {
+      box-shadow:
+        inset 0 0 10px rgba(212, 175, 55, 0.6),
+        0 0 5px rgba(212, 175, 55, 0.45);
+    }
+
+    .slick-prev:active,
+    .slick-next:active {
+      box-shadow: inset 0 0 14px rgba(212, 175, 55, 0.8);
+    }
+
+    .slick-prev {
+      left: -45px;
+    }
+
+    .slick-next {
+      right: -45px;
+    }
+
+    /* кастом цвет стрелок */
+    .slick-prev::before,
+    .slick-next::before {
+      font-size: 16px;
+      color: #a28b3f;
+      opacity: 0.95;
+    }
+  }
+  &_slide {
+    padding: 1.5px;
+
+    img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+  }
 }
 
 /* Animations */
@@ -96,103 +150,45 @@
   }
 }
 
-/* ============================= */
-/* 🔽 SLIDER */
-/* ============================= */
-.AboutSlider {
-  width: 100%;
-  max-width: 1200px;
-  position: relative;
-
-  .slick-prev,
-  .slick-next {
-    width: 40px;
-    height: 40px;
-    z-index: 10;
-    border-radius: 50%;
-    background: rgba(40, 39, 39, 0.2); /* полупрозрачный фон */
-    box-shadow:
-      inset 0 0 10px rgba(212, 175, 55, 0.35),
-      0 0 4px rgba(212, 175, 55, 0.25);
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-
-    /* плавный отклик */
-    transition:
-      transform 0.4s ease,
-      box-shadow 0.4s ease,
-      background 0.4s ease;
-  }
-
-  .slick-prev:hover,
-  .slick-next:hover {
-    box-shadow:
-      inset 0 0 10px rgba(212, 175, 55, 0.6),
-      0 0 5px rgba(212, 175, 55, 0.45);
-  }
-
-  .slick-prev:active,
-  .slick-next:active {
-    box-shadow: inset 0 0 14px rgba(212, 175, 55, 0.8);
-  }
-
-  .slick-prev {
-    left: -45px;
-  }
-
-  .slick-next {
-    right: -45px;
-  }
-
-  /* кастом цвет стрелок */
-  .slick-prev::before,
-  .slick-next::before {
-    font-size: 16px;
-    color: #a28b3f;
-    opacity: 0.95;
-  }
-}
-
-.AboutSlide {
-  padding: 0 4px;
-
-  img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 5px;
-    display: block;
-  }
-}
-
 /* MOBILE */
-@media (max-width: 728px) {
-  .AboutContainer {
-    gap: 12px;
-    padding: 10px;
+@media (max-width: 628px) {
+  .AboutPage {
+    gap: 30px;
+    margin-top: 80px;
   }
 
-  .AboutImage {
-    width: 100px;
+  .AboutPage_container {
+    gap: 6px;
+    padding: 6px;
   }
-  .AboutText {
-    line-height: 1.3;
-    font-size: 0.75rem;
+  .AboutPage_title {
+    font-size: 0.8rem;
+  }
+  .AboutPage_wrapper > img {
+    width: 46px;
+  }
+
+  .AboutPage_text {
+    line-height: 1.1;
+    font-size: 0.7rem;
     font-family: monospace;
   }
-  .AboutSlide img {
-    width: 100%;
-  }
 
-  .AboutSlider {
+  .AboutPage_slider {
+    margin-top: 50px;
     .slick-prev,
     .slick-next {
-      width: 32px;
-      height: 32px;
+      width: 34px;
+      height: 34px;
     }
+    .AboutPage_slide {
+      padding: 1px;
 
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
     .slick-prev {
       left: -15px;
     }
@@ -202,171 +198,3 @@
     }
   }
 }
-
-// .AboutPage {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   margin-top: 90px;
-//   font-family: monospace;
-//   overflow-x: hidden; // ✅ фикс
-//   overflow-y: auto;
-//   padding: 14px;
-//   gap: 40px;
-// }
-
-// .AboutContainer {
-//   flex: 1;
-//   max-width: 720px;
-//   display: flex;
-//   flex-direction: column;
-//   padding: 20px;
-//   border-radius: 12px;
-//   box-shadow: 0 1px 3px rgba(212, 175, 55, 0.5);
-//   animation: slideInFromTop 0.7s ease forwards;
-//   transform-origin: top center; /* для плавности */
-//   gap: 40px;
-//   position: relative;
-//   overflow: hidden;
-// }
-
-// /* React logo */
-// .AboutImageWrapper {
-//   display: flex;
-//   justify-content: start;
-// }
-
-// .AboutImage {
-//   width: 145px;
-//   border-radius: 5px;
-//   border: 1px solid #cdac3e;
-//   opacity: 0;
-//   animation: imageAppear 0.7s ease forwards;
-//   animation-delay: 0.2s; /* появляется чуть позже */
-// }
-
-// /* Language */
-// .AboutLang {
-//   position: absolute;
-//   top: 14px;
-//   right: 16px;
-//   z-index: 5;
-// }
-
-// .AboutLang_menu {
-//   display: flex;
-//   flex-direction: column;
-
-//   .AboutLang_item {
-//     font-size: 10px;
-//     padding: 5px;
-//   }
-// }
-
-// /* Content */
-// .AboutTitle {
-//   margin-bottom: 5px;
-//   color: #fbe8a6;
-//   font-size: 1rem;
-// }
-
-// .AboutText {
-//   line-height: 1.6;
-//   color: #e0d7b0;
-//   font-size: 0.8rem;
-//   font-family: monospace;
-// }
-
-// /* Animations */
-// @keyframes slideInFromTop {
-//   from {
-//     opacity: 0;
-//     transform: translateY(-24px);
-//   }
-//   to {
-//     opacity: 1;
-//     transform: translateY(0);
-//   }
-// }
-
-// @keyframes imageAppear {
-//   from {
-//     opacity: 0;
-//     transform: translateX(-20px) scale(0.95);
-//   }
-//   to {
-//     opacity: 1;
-//     transform: translateX(0) scale(1);
-//   }
-// }
-
-// /* ============================= */
-// /* 🔽 SLIDER ПОД AboutContainer */
-// /* ============================= */
-
-// .AboutSlider {
-//   width: 100%;
-//   max-width: 1000px;
-// }
-
-// .AboutSlide {
-//   padding: 0 6px;
-
-//   img {
-//     width: 100%;
-//     height: 180px;
-//     object-fit: cover;
-//     border-radius: 10px;
-//     display: block;
-//   }
-//   .slick-prev,
-//   .slick-next {
-//     color: #d4af37;
-//     width: 46px;
-//     height: 46px;
-//     z-index: 2;
-
-//     &:before {
-//       font-size: 20px;
-//       color: #d4af37;
-//       opacity: 0.85;
-//     }
-
-//     &:hover:before {
-//       opacity: 1;
-//     }
-//   }
-
-//   .slick-prev {
-//     left: -32px;
-//   }
-
-//   .slick-next {
-//     right: -32px;
-//   }
-// }
-
-// /* MOBILE */
-// @media (max-width: 728px) {
-//   .AboutPage {
-//     flex-direction: column;
-//     align-items: center;
-//   }
-
-//   .AboutImage {
-//     width: 120px;
-//   }
-
-//   .AboutSlide img {
-//     height: 140px;
-//   }
-
-//   .slick-prev {
-//     left: -24px;
-//   }
-
-//   .slick-next {
-//     right: -24px;
-//   }
-// }
